completed StreamingService.java logic, along with startmenu.java login page logic - no search functions are in StreamingService.java - no login or signup functions are in StartMenu.java
class model changed to include changes in StartMenu.java
- added 1 function